--- a/docs/_posts/2024-01-24-sites.md
+++ b/docs/_posts/2024-01-24-sites.md
@@ -10,3 +10,6 @@ permalink: /sites
 **GreenEdge** is made to give controll of your carbon emission footprint by automating the process of collecting the emissions.
 
 Througout this course we will go through all aspects of GreeEdge, such as *Sites*, *Emissions*, *Reporting*, *Budgets* and more.
+
+<a class="offset-4 btn btn-success btn-lg" href="/sites-lab" role="button">Go to lab</a>
+<a class="btn btn-info btn-lg" href="/" role="button">Back</a>
