--- a/docs/_posts/2024-01-24-sites.md
+++ b/docs/_posts/2024-01-24-sites.md
@@ -4,12 +4,16 @@ title:  "Manage sites"
 category: sites
 permalink: /sites
 ---
-# Manage sites
-*GreenEdge automates data collection and reporting of greenhouse gas emissions for enterprises. It minimizes the effort and enhances the data quality for reporting and budgets along with a customized dashboard to further engage staff members, partners and customers.*
+*Sites* refers to any type of building associated by the Business unit such as an office, a warehouse, a store or a parking facility. 
+Sites can be shared with other Business units or legal entities outside the scope of your organization. For instance, an office space might be part of a bigger complex shared with many other companies. In such cases it’s common that the usage of electricity and heating is split among the tenants based on the square space used.
 
-**GreenEdge** is made to give controll of your carbon emission footprint by automating the process of collecting the emissions.
+In such cases it’s important to be able to set the percentage of shared emissions, after which **GreenEdge** will distribute the CO2-e among the Business units.
 
-Througout this course we will go through all aspects of GreeEdge, such as *Sites*, *Emissions*, *Reporting*, *Budgets* and more.
+<img src="assets/images/site-1.png">
+
+While Sites can be shared among one or more Business units, only one can be *Owner*. The *Owner* is the only one that can change the Site, such as adding or removing other Business units.
+
+Site emissions can be collected automatically through connected meters on-site. 
 
 <a class="offset-4 btn btn-success btn-lg" href="/sites-lab" role="button">Go to lab</a>
 <a class="btn btn-info btn-lg" href="/" role="button">Back</a>
