updated lab with instructions

--- a/docs/_posts/2024-01-26-extra-lab.md
+++ b/docs/_posts/2024-01-26-extra-lab.md
@@ -4,11 +4,25 @@ title:  "Extra tutorial"
 category: extra-lab
 permalink: /extra-lab
 ---
-# Extra tutorial
-*GreenEdge automates data collection and reporting of greenhouse gas emissions for enterprises. It minimizes the effort and enhances the data quality for reporting and budgets along with a customized dashboard to further engage staff members, partners and customers.*
 
-**GreenEdge** is made to give controll of your carbon emission footprint by automating the process of collecting the emissions.
+This section will cover how to suggest a feature or report a bug/support from your business unit.
+To be able to manage your business unit: go to admin page by clicking on `settings` in the upper right corner of the dashboard and login.
 
-Througout this course we will go through all aspects of GreeEdge, such as *Sites*, *Emissions*, *Reporting*, *Budgets* and more.
+## 1. Suggest feature
+
+<img src="assets/images/feature-lab-1.PNG">
+
+1. Click on `Idea`
+2. Fill out the input fields
+3. Click on `Send`
+
+
+## 1. Report bug/ support
+
+<img src="assets/images/support-lab-1.PNG">
+
+1. Click on `Help`
+2. Fill out the input fields
+3. Click on `Send`
 
 <a class="offset-4 btn btn-info btn-lg" href="/" role="button">Home</a>
