--- a/docs/_posts/2024-01-26-sites-lab.md
+++ b/docs/_posts/2024-01-26-sites-lab.md
@@ -4,11 +4,59 @@ title:  "Manage sites tutorial"
 category: sites-lab
 permalink: /sites-lab
 ---
-# Manage sites tutorial
-*GreenEdge automates data collection and reporting of greenhouse gas emissions for enterprises. It minimizes the effort and enhances the data quality for reporting and budgets along with a customized dashboard to further engage staff members, partners and customers.*
 
-**GreenEdge** is made to give controll of your carbon emission footprint by automating the process of collecting the emissions.
+This section will cover how to add, edit and remove a site from your business unit.
+To be able to manage your business unit: go to admin page by clicking on `settings` in the upper right corner of the dashboard and login.
 
-Througout this course we will go through all aspects of GreeEdge, such as *Sites*, *Emissions*, *Reporting*, *Budgets* and more.
+## 1. Add site
+
+<img src="assets/images/add-site-lab-1.PNG">
+
+1. Click on `ADD SITE`.
+
+<img src="assets/images/add-site-lab-2.PNG">
+
+2. Fill in the full address and select it in the dropdown.
+
+<img src="assets/images/add-site-lab-3.PNG">
+
+3. Make sure Country, City, Postal code, Postal address are filled out. Location and site description is optional.
+4. Click on `Save`.
+
+Your site is noew visible under the section sites.
+
+## 2. Edit site
+
+<img src="assets/images/edit-site-lab-1.PNG">
+
+1. (Optional) If the site should be enabled as your business unit main office. Click the `Main office` check box.
+2. To edit your site, click on `EDIT` button.
+
+<img src="assets/images/edit-site-lab-2.PNG">
+
+3. Fill in the fields that needs to be changed.
+4. To change ownership of the site, type in the internal identifier that can be found under ”Business unit” section and click on `CHANGE OWNER`. 
+5. If the site needs to be connected to a MicroSrviceBus node, click on `Select Node` under the section microServiceBus.com Node (on-site IoT gateway).
+6. When done click on `Save`.
+
+## 3. Disable / remove site
+
+A site can´t be removed from your business unit, but disabled. This prevents historical data from being deleted. 
+
+<img src="assets/images/remove-site-lab-1.PNG">
+
+1. To disabled your site, click on `EDIT` button.
+2. Click on `WE NO LONGER OCCPY THIS SITE` and your site will disappear from the site list.
+
+## 4. Enable site
+
+To add a disabled site again:
+
+<img src="assets/images/enable-sites-lab-1.PNG">
+
+1. Click on the checkbox `Show disabled sites` to view disabled sites in your list.
+2. Click on `EDIT` button for your site that is going to be enabled
+3. Click on `WE HAVE MOVED BACK TO THIS SITE`. The site should now be visible in the site list again.
+
 
 <a class="offset-4 btn btn-info btn-lg" href="/" role="button">Home</a>
