updated labs and general info

--- a/docs/_posts/2024-01-24-actions.md
+++ b/docs/_posts/2024-01-24-actions.md
@@ -4,12 +4,18 @@ title:  "Manage actions"
 category: actions
 permalink: /actions
 ---
-# Manage actions
-*GreenEdge automates data collection and reporting of greenhouse gas emissions for enterprises. It minimizes the effort and enhances the data quality for reporting and budgets along with a customized dashboard to further engage staff members, partners and customers.*
 
-**GreenEdge** is made to give controll of your carbon emission footprint by automating the process of collecting the emissions.
+<img src="assets/images/budget&actions-page.PNG">
 
-Througout this course we will go through all aspects of GreeEdge, such as *Sites*, *Emissions*, *Reporting*, *Budgets* and more.
+To be able to reach our goals from the budget that has been sett based on the baseline, we need actions. Actions can be anything from changing our way of working, switching to LEDs or transportation. These actions
+require a member to follow them up and an esitmate of carbon emission impact. Togheter will the actions be calculated from the business units budget. To demonstrate how big of an impact the actions will have. But
+also how much more carbon dioxide that will be left. More actions might need to be created in that case to reach our goal.
+
+# AI generator
+
+When clicking on "Suggested actions" under the "Budget and Actions" section. An AI will help to suggest a couple of actions that might be helpful for the business unit. The AI will calculate the actions based
+on the information that exists about the business unit, such as business unit general information, emission sources, sites etc. These actions will already be prefilled with the suggestion but only require a
+member to be responsible for following it up. Just like any other action these can also be modified or deleted.
 
 <a class="offset-4 btn btn-success btn-lg" href="/actions-lab" role="button">Go to lab</a>
 <a class="btn btn-info btn-lg" href="/" role="button">Back</a>
