--- a/docs/_posts/2024-01-24-extra.md
+++ b/docs/_posts/2024-01-24-extra.md
@@ -4,12 +4,11 @@ title:  "Extra"
 category: extra
 permalink: /extra
 ---
-# Extra
-*GreenEdge automates data collection and reporting of greenhouse gas emissions for enterprises. It minimizes the effort and enhances the data quality for reporting and budgets along with a customized dashboard to further engage staff members, partners and customers.*
 
-**GreenEdge** is made to give controll of your carbon emission footprint by automating the process of collecting the emissions.
+<img src="assets/images/idea-page.PNG">
 
-Througout this course we will go through all aspects of GreeEdge, such as *Sites*, *Emissions*, *Reporting*, *Budgets* and more.
+If there is any suggestion on an improvement of the website, it is possible to send in a featuer request through the application form. Which can be located under "Idea". Or if a problem would occour please 
+send in a bug report through the application form under "Help".
 
 <a class="offset-4 btn btn-success btn-lg" href="/extra-lab" role="button">Go to lab</a>
 <a class="btn btn-info btn-lg" href="/" role="button">Back</a>
