--- a/docs/_posts/2024-01-24-members.md
+++ b/docs/_posts/2024-01-24-members.md
@@ -4,12 +4,24 @@ title:  "Manage members"
 category: members
 permalink: /members
 ---
-# Manage members
-*GreenEdge automates data collection and reporting of greenhouse gas emissions for enterprises. It minimizes the effort and enhances the data quality for reporting and budgets along with a customized dashboard to further engage staff members, partners and customers.*
 
-**GreenEdge** is made to give controll of your carbon emission footprint by automating the process of collecting the emissions.
+<img src="assets/images/members-page.PNG">
 
-Througout this course we will go through all aspects of GreeEdge, such as *Sites*, *Emissions*, *Reporting*, *Budgets* and more.
+**Members** refers to individuals that will access the business unit, which is the organizational entity where emissions are managed and reported. When inviting a member it can contain two different roles within
+the business unit. Depending on what the user privilege, it can either be assigned with a reader or admin role.
+
+## Reader 
+
+As a member assigned with a reader role it does include some restrictions. A reader can not manage other members, emission sources, baseline, budget and sites. Reader role works as a spectator that can mostly view data and the structure.
+
+## Admin
+
+With an admin role the member can manage emission sources, sites, budget, memebers etc. 
+
+## Site admin
+
+The role site admin can not be assigned on the platform. This role is only for members that aquire knowledge of assiting, splitting or adding business units.
+
 
 <a class="offset-4 btn btn-success btn-lg" href="/members-lab" role="button">Go to lab</a>
 <a class="btn btn-info btn-lg" href="/" role="button">Back</a>
