--- a/docs/_posts/2024-01-24-reports.md
+++ b/docs/_posts/2024-01-24-reports.md
@@ -5,11 +5,10 @@ category: reports
 permalink: /reports
 ---
 
-*GreenEdge automates data collection and reporting of greenhouse gas emissions for enterprises. It minimizes the effort and enhances the data quality for reporting and budgets along with a customized dashboard to further engage staff members, partners and customers.*
+<img src="assets/images/report-page.PNG">
 
-**GreenEdge** is made to give controll of your carbon emission footprint by automating the process of collecting the emissions.
-
-Througout this course we will go through all aspects of GreeEdge, such as *Sites*, *Emissions*, *Reporting*, *Budgets* and more.
+A report is a collection of data that can be filtered through conditions to view the desired data. Multiple reports can be created for each specific desire. The reports can be visualized in a couple of different
+ways to best represent the data, such as a table, chart or heatmap.
 
 <a class="offset-4 btn btn-success btn-lg" href="/reports-lab" role="button">Go to lab</a>
 <a class="btn btn-info btn-lg" href="/" role="button">Back</a>
