fixed link on buttons

--- a/docs/_posts/2024-01-24-actions.md
+++ b/docs/_posts/2024-01-24-actions.md
@@ -17,5 +17,5 @@ When clicking on "Suggested actions" under the "Budget and Actions" section. An 
 on the information that exists about the business unit, such as business unit general information, emission sources, sites etc. These actions will already be prefilled with the suggestion but only require a
 member to be responsible for following it up. Just like any other action these can also be modified or deleted.
 
-<a class="offset-4 btn btn-success btn-lg" href="/actions-lab" role="button">Go to lab</a>
-<a class="btn btn-info btn-lg" href="/" role="button">Back</a>
+<a class="offset-4 btn btn-success btn-lg" href="{{site.baseurl}}/actions-lab" role="button">Go to lab</a>
+<a class="btn btn-info btn-lg" href="{{site.baseurl}}" role="button">Back</a>
