--- a/docs/_posts/2024-01-24-extra.md
+++ b/docs/_posts/2024-01-24-extra.md
@@ -10,5 +10,5 @@ permalink: /extra
 If there is any suggestion on an improvement of the website, it is possible to send in a featuer request through the application form. Which can be located under "Idea". Or if a problem would occour please 
 send in a bug report through the application form under "Help".
 
-<a class="offset-4 btn btn-success btn-lg" href="/extra-lab" role="button">Go to lab</a>
-<a class="btn btn-info btn-lg" href="/" role="button">Back</a>
+<a class="offset-4 btn btn-success btn-lg" href="{{site.baseurl}}/extra-lab" role="button">Go to lab</a>
+<a class="btn btn-info btn-lg" href="{{site.baseurl}}" role="button">Back</a>
