--- a/docs/_posts/2024-01-24-members.md
+++ b/docs/_posts/2024-01-24-members.md
@@ -23,5 +23,5 @@ With an admin role the member can manage emission sources, sites, budget, memebe
 The role site admin can not be assigned on the platform. This role is only for members that aquire knowledge of assiting, splitting or adding business units.
 
 
-<a class="offset-4 btn btn-success btn-lg" href="/members-lab" role="button">Go to lab</a>
-<a class="btn btn-info btn-lg" href="/" role="button">Back</a>
+<a class="offset-4 btn btn-success btn-lg" href="{{site.baseurl}}/members-lab" role="button">Go to lab</a>
+<a class="btn btn-info btn-lg" href="{{site.baseurl}}" role="button">Back</a>
