--- a/docs/_posts/2024-01-24-reports.md
+++ b/docs/_posts/2024-01-24-reports.md
@@ -10,5 +10,5 @@ permalink: /reports
 A report is a collection of data that can be filtered through conditions to view the desired data. Multiple reports can be created for each specific desire. The reports can be visualized in a couple of different
 ways to best represent the data, such as a table, chart or heatmap.
 
-<a class="offset-4 btn btn-success btn-lg" href="/reports-lab" role="button">Go to lab</a>
-<a class="btn btn-info btn-lg" href="/" role="button">Back</a>
+<a class="offset-4 btn btn-success btn-lg" href="{{site.baseurl}}/reports-lab" role="button">Go to lab</a>
+<a class="btn btn-info btn-lg" href="{{site.baseurl}}" role="button">Back</a>
