--- a/docs/_posts/2024-01-24-sites.md
+++ b/docs/_posts/2024-01-24-sites.md
@@ -15,5 +15,5 @@ While Sites can be shared among one or more Business units, only one can be *Own
 
 Site emissions can be collected automatically through connected meters on-site. 
 
-<a class="offset-4 btn btn-success btn-lg" href="/sites-lab" role="button">Go to lab</a>
-<a class="btn btn-info btn-lg" href="/" role="button">Back</a>
+<a class="offset-4 btn btn-success btn-lg" href="{{site.baseurl}}/sites-lab" role="button">Go to lab</a>
+<a class="btn btn-info btn-lg" href="{{site.baseurl}}" role="button">Back</a>
