--- a/docs/_posts/2024-01-26-extra-lab.md
+++ b/docs/_posts/2024-01-26-extra-lab.md
@@ -25,4 +25,4 @@ To be able to manage your business unit: go to admin page by clicking on `settin
 2. Fill out the input fields
 3. Click on `Send`
 
-<a class="offset-4 btn btn-info btn-lg" href="/" role="button">Home</a>
+<a class="offset-4 btn btn-info btn-lg" href="{{site.baseurl}}" role="button">Home</a>
