--- a/docs/_posts/2024-01-26-sites-lab.md
+++ b/docs/_posts/2024-01-26-sites-lab.md
@@ -59,4 +59,4 @@ To add a disabled site again:
 3. Click on `WE HAVE MOVED BACK TO THIS SITE`. The site should now be visible in the site list again.
 
 
-<a class="offset-4 btn btn-info btn-lg" href="/" role="button">Home</a>
+<a class="offset-4 btn btn-info btn-lg" href="{{site.baseurl}}" role="button">Home</a>
